cmake_minimum_required(VERSION 3.8)
project(gazebo_keyboard_cmdvel)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

add_executable(keyboard_to_cmdvel src/keyboard_to_cmdvel.cpp)
add_executable(imu_reading src/imu_reading.cpp)

ament_target_dependencies(keyboard_to_cmdvel rclcpp std_msgs geometry_msgs sensor_msgs)
ament_target_dependencies(imu_reading rclcpp std_msgs geometry_msgs sensor_msgs)

install(TARGETS keyboard_to_cmdvel imu_reading
  DESTINATION lib/${PROJECT_NAME}
)
install(DIRECTORY launch config
  DESTINATION share/${PROJECT_NAME}
)

ament_package()
